--- a/less/variables.less
+++ b/less/variables.less
@@ -2,5 +2,6 @@
 /* Variables                                                                     */
 /*********************************************************************************/
 
+@white: #FFF;
 @primaryColor: #ef4036;
 @primaryFontStack: 'Source Sans Pro', sans-serif;
