--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   background-size: cover;
   background-position: center 0;
   background-attachment: fixed;
+  font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
 }
 body,
@@ -20,10 +21,8 @@ input,
 textarea,
 select {
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 18pt;
-  line-height: 1.75em;
   font-weight: 300;
-  color: #3a3939;
+  color: #666666;
   text-shadow: 0 0 0.5px rgba(58, 57, 57, 0.25);
   -webkit-text-stroke: 0.25px;
 }
@@ -49,7 +48,10 @@ h2 {
   font-size: 1.25em;
 }
 h3 {
-  font-size: 1em;
+  font-size: 3.6em;
+}
+h4 {
+  font-size: 2.2em;
 }
 strong,
 b {
@@ -60,15 +62,15 @@ i {
   font-style: italic;
 }
 a {
-  color: #35b88f;
-  text-shadow: 0 0 0.5px rgba(53, 184, 143, 0.25);
-  -moz-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
-  -webkit-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
-  -o-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
-  -ms-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
-  transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
+  color: #ffffff;
+  /*
+		-moz-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
+		-webkit-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
+		-o-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
+		-ms-transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
+		transition: border-color 0.35s ease-in-out, color 0.35s ease-in-out;
+		*/
   text-decoration: none;
-  border-bottom: dotted 1px rgba(53, 184, 143, 0.5);
 }
 a:hover {
   border-bottom-color: rgba(53, 184, 143, 0);
@@ -93,32 +95,13 @@ blockquote {
   padding: 1em 0 1em 2em;
   font-style: italic;
 }
-p,
-ul,
-ol,
-dl,
-table {
-  margin-bottom: 1em;
-}
-header {
-  margin-bottom: 1em;
-}
 header p {
   display: block;
-  margin: 0.5em 0 0 0;
-  padding: 0 0 1.5em 0;
-}
-footer {
-  margin-top: 1em;
 }
 br.clear {
   clear: both;
 }
 /* Sections/Articles */
-section,
-article {
-  margin-bottom: 3em;
-}
 section > :last-child,
 article > :last-child {
   margin-bottom: 0;
@@ -131,13 +114,43 @@ article:last-child {
 .row > article {
   margin-bottom: 0;
 }
+/* Images */
+.image {
+  display: inline-block;
+  border: 0;
+}
+.image img {
+  display: block;
+  width: 100%;
+}
+.image.featured {
+  display: block;
+  width: 100%;
+  margin: 0 0 2em 0;
+}
+.image.full {
+  display: block;
+  width: 100%;
+}
+.image.left {
+  float: left;
+  margin: 0 2em 2em 0;
+}
+.image.centered {
+  display: block;
+  margin: 0 0 2em 0;
+}
+.image.centered img {
+  margin: 0 auto;
+  width: auto;
+}
 /* Buttons */
 .button {
   position: relative;
   display: inline-block;
   border: 0;
-  background: #35b88f;
-  color: #fff;
+  background-color: #ffffff;
+  color: #ef4036;
   cursor: pointer;
   text-decoration: none;
   outline: 0;
@@ -152,7 +165,7 @@ article:last-child {
   transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out;
 }
 .button:hover {
-  background: #45c89f;
+  background-color: rgba(255, 255, 255, 0.85);
 }
 .button.style2 {
   color: #ffffff;
@@ -172,10 +185,6 @@ article:last-child {
 .button.style3:hover {
   background: rgba(58, 57, 57, 0.025);
 }
-#intro {
-  height: 1000px;
-  background: #ffffff;
-}
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
@@ -192,30 +201,149 @@ article:last-child {
   display: inline-block;
   padding: 0 0 0em 0;
 }
-#header header h1 {
+#header header h2 {
   font-weight: 600;
-  font-size: 2em;
+  font-size: 3.8em;
 }
 #header header p {
-  font-size: 1em;
+  font-size: 3.8em;
   padding: 0;
+}
+#header header .button {
+  display: block;
+  padding: .3em 0em .3em 0em;
+  font-size: 2.4em;
+  font-weight: 400;
+}
+/*********************************************************************************/
+/* Intro                                                                         */
+/*********************************************************************************/
+#intro {
+  position: relative;
+  background: #e2e2e2;
+  text-align: center;
+  padding: 4em 0em 0em 0em;
+}
+#intro header h2 {
+  color: #ef4036;
+  font-size: 3.6em;
+}
+#intro header p {
+  font-size: 1.8em;
+}
+#intro footer {
+  padding: 4em 0em 0em 0em;
+}
+/*********************************************************************************/
+/* Features                                                                      */
+/*********************************************************************************/
+#features {
+  background: #ffffff;
+  position: relative;
+  margin: 0;
+  padding: 4em 0em 0em 0em;
+}
+#features header {
+  padding: 0em 0em 4em 0em;
+}
+#features header h3 {
+  font-weight: 200;
+  color: #ef4036;
+}
+#features header p {
+  font-size: 1.8em;
+}
+#features article {
+  background-color: #ef4036;
+  padding: 4em 0em;
+}
+#features article h4 {
+  color: #ffffff;
+  font-weight: 600;
+}
+#features article p {
+  color: #ffffff;
+  font-size: 1.6em;
+  font-weight: 300;
+}
+#features article p .underline {
+  border-bottom: 1px solid #ffffff;
+}
+#features footer {
+  background-color: #ef4036;
+  text-align: center;
+  padding: 0em 0em 4em 0em;
+}
+#features footer .button {
+  padding: 1em 1.5em 1em 1.5em;
+  font-weight: 600;
+  font-size: 1.8em;
+}
+/*********************************************************************************/
+/* Team                                                                          */
+/*********************************************************************************/
+#team {
+  background: #eaeaea;
+  position: relative;
+  margin: 0;
+}
+#team header {
+  padding: 4em 0em;
+}
+#team header .team-member {
+  text-align: center;
+}
+#team header .team-member h4 {
+  color: #ef4036;
+}
+#team footer {
+  background: #ffffff;
+  padding: 4em 0em;
+}
+/*********************************************************************************/
+/* Register                                                                      */
+/*********************************************************************************/
+#register {
+  background: #333;
+  position: relative;
+  height: 400px;
+  margin: 0;
+}
+#register header {
+  padding: 4em 0em;
+  background: #000;
+}
+#register header h2 {
+  color: #ffffff;
+  font-size: 3.2em;
+}
+#register header h3 {
+  font-size: 2.2em;
+  color: #ffffff;
+}
+#register header p {
+  font-size: 1.8em;
+  color: #ffffff;
+}
+#register footer {
+  padding: 4em 0em;
 }
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
 #footer {
   position: relative;
-  color: #fff;
+  color: #ffffff;
   text-align: center;
-  margin: 4.5em 0 0 0;
+  margin: 0;
   background: #333333;
+}
+#footer footer {
+  padding: 4em 0em;
 }
 #footer footer p {
   color: #ccc;
-  font-size: .5em;
+  font-size: 1.2em;
   font-weight: 200;
-  letter-spacing: .1em;
-}
-#footer footer p strong {
-  color: #fff;
+  letter-spacing: .05em;
 }
