--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,61 @@ article:last-child {
   margin: 0 auto;
   width: auto;
 }
+/* Forms */
+form label {
+  display: block;
+  margin: 0 0 0.5em 0;
+}
+form input.button,
+form input.text,
+form select,
+form textarea {
+  -webkit-appearance: none;
+  display: block;
+  border: 0;
+  background: #f5f5f5;
+  width: 100%;
+  padding: 0.75em;
+  -moz-transition: background-color 0.35s ease-in-out;
+  -webkit-transition: background-color 0.35s ease-in-out;
+  -o-transition: background-color 0.35s ease-in-out;
+  -ms-transition: background-color 0.35s ease-in-out;
+  transition: background-color 0.35s ease-in-out;
+}
+form input.text:focus,
+form select:focus,
+form textarea:focus {
+  background: #f2f2f2;
+}
+form textarea {
+  min-height: 12em;
+}
+form .formerize-placeholder {
+  color: #5a5959 !important;
+}
+form ::-webkit-input-placeholder {
+  color: #5a5959 !important;
+}
+form :-moz-placeholder {
+  color: #5a5959 !important;
+}
+form ::-moz-placeholder {
+  color: #5a5959 !important;
+}
+form :-ms-input-placeholder {
+  color: #5a5959 !important;
+}
+form ::-moz-focus-inner {
+  border: 0;
+}
+form input.text,
+form select {
+  line-height: 1em;
+}
+form ul.actions {
+  margin-bottom: 0;
+  text-align: center;
+}
 /* Buttons */
 .button {
   position: relative;
@@ -178,12 +233,8 @@ article:last-child {
   text-shadow: 0 0 0.5px rgba(255, 255, 255, 0.25) !important;
 }
 .button.style3 {
-  background: none;
-  color: #3a3939;
-  box-shadow: inset 0 0 0 1px #dad9d9;
-}
-.button.style3:hover {
-  background: rgba(58, 57, 57, 0.025);
+  background: #ef4036;
+  color: #ffffff;
 }
 /*********************************************************************************/
 /* Header                                                                        */
@@ -306,7 +357,6 @@ article:last-child {
 #register {
   background: #333;
   position: relative;
-  height: 400px;
   margin: 0;
 }
 #register header {
