--- a/less/buttons.less
+++ b/less/buttons.less
@@ -44,12 +44,11 @@
 
 			&.style3 {
 
-				background: none;
-				color: #3a3939;
-				box-shadow: inset 0 0 0 1px #dad9d9;
+				background: @primaryColor;
+				color: @white;
 
 				&:hover {
-					background: rgba(58,57,57,0.025);
+					
 				}
 
 			}
