--- a/css/style-normal.css
+++ b/css/style-normal.css
@@ -1,15 +1,8 @@
-/*
-	Overflow 1.1 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
-/*********************************************************************************/
-/* Banner                                                                        */
-/*********************************************************************************/
-
-	#banner
-	{
-		padding: 4em 0 4em 0;
-		background-size: 175% auto;
-	}
+#header header .logo {
+  margin: 0em 0em;
+}
+#header header p {
+  font-size: 3em;
+  line-height: 1.2em;
+  margin-bottom: 2em;
+}
