--- a/less/basic.less
+++ b/less/basic.less
@@ -9,37 +9,42 @@
 		background-position: center 0;
 		background-attachment: fixed;
 		font-size: 62.5%;
+		font-weight: 300;
+		color: #666666;
+		font-family: @primaryFontStack;
 		-webkit-font-smoothing: antialiased;
 
 	}
 
 	body,input,textarea,select
 	{
-		font-family: @primaryFontStack;
 		
-		//line-height: 1.75em;
-		font-weight: 300;
-		
-		color: #666666;
-		text-shadow: 0 0 0.5px rgba(58,57,57,0.25);
 		-webkit-text-stroke: 0.25px;
 	}
 
 	h1,h2,h3,h4,h5,h6
 	{
-		font-weight: 400;
-		line-height: 1.75em;
+		font-weight: 200;
+
 	}
 	
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
-		{
-			color: inherit;
-			text-decoration: none;
-		}
+	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
+	{
+		color: inherit;
+		text-decoration: none;
+	}
 		
+
+	h1 {
+		font-size: 3.6em;
+		line-height: 1.4em;
+	}
+
 	h2
 	{
-		font-size: 1.25em;
+		font-size: 2.8em;
+		line-height: 1.2em;
+		font-weight: 400;
 
 	}
 	
