--- a/less/fitamize.less
+++ b/less/fitamize.less
@@ -17,36 +17,36 @@
 	{
 		position: relative;
 		color: #fff;
-		text-shadow: 0 0 0.5px rgba(255,255,255,0.25);
 		text-align: center;
 		margin: 0;
-		padding: 0em 0 0em 0;
 		cursor: default;
 
 		header {
 			display: inline-block;
-			padding: 0 0 0em 0;
+			padding: 0em;
 
-			h2 {
-				font-weight: 600;
-				font-size: 3.8em;
+			.logo {
+				margin-bottom: 4em;
+			}
+
+			h1 {
+
+				strong {
+					font-weight: 600;
+				}
 			}
 
 			p {
 				font-size: 3.8em;
-				padding: 0;
+				margin-bottom: 3em;
 			}
 
 			.button {
-				display: block;
-				padding: .3em 0em .3em 0em;
-				font-size: 2.4em;
-				font-weight: 400;
+
 			}
 		}
 	}
-				
-
+	
 /*********************************************************************************/
 /* Intro                                                                         */
 /*********************************************************************************/
@@ -65,11 +65,14 @@
 		h2 {
 			color: @primaryColor;
 			font-size: 3.6em;
+			margin-bottom: 1em;
 
 		}
 
 		p {
-			font-size: 1.8em;
+			font-size: 2em;
+			line-height: 1.3em;
+			margin-bottom: 2em;
 		}
 
 	}
@@ -97,31 +100,36 @@
 
 	header {
 
-		padding: 0em 0em 4em 0em;
+		padding: 0em 0em 8em 0em;
 
-		h3 {
-			font-weight: 200;
+		h2 {
 			color: @primaryColor;
+			margin: 2em 0em 1em 0em;
 		}
 
 		p {
 			font-size: 1.8em;
+			line-height: 1.3em;
+			margin-bottom: 1em;
 		}
 
 	}
 
 	article {
 		background-color: @primaryColor;
-		padding: 4em 0em;
+		padding: 6em 0em 6em 0em;
+		position: relative;
 
 		h4 {
 			color: @white;
 			font-weight: 600;
+			margin-bottom: .5em;
 		}
 
 		p {
 			color: @white;
-			font-size: 1.6em;
+			font-size: 1.5em;
+			line-height: 1.3em;
 			font-weight: 300;
 
 			.underline {
@@ -130,20 +138,37 @@
 
 			}
 		}
+
+		.feature-icon {
+			margin-top: -100px;
+		}
 	}
 
 	footer {
 		background-color: @primaryColor;
 		text-align: center;
-		padding: 0em 0em 4em 0em;
+		padding: 0em 0em 8em 0em;
 
 		.button {
 
 			padding: 1em 1.5em 1em 1.5em;
 			font-weight: 600;
 			font-size: 1.8em;
+			position: relative;
+
+			.discount-bubble {
+				width: 201px;
+				height: 99px;
+				display: block;
+				background: url(../images/discount-bubble.png);
+				position: absolute;
+				right: -230px;
+				bottom: -40px;
+			}
 
 		}
+
+		
 	}
 }
 
@@ -164,11 +189,34 @@
 
 			padding: 4em 0em;
 
+			h2 {
+				color: #333;
+				margin-bottom: .5em;
+			}
+
+			p {
+				font-size: 1.8em;
+				line-height: 1.3em;
+				margin-bottom: 1em;
+			}
+
 		.team-member {
 			text-align: center;
 
+			.avatar {
+				margin-bottom: 1em;
+			}
+
 			h4 {
 				color: @primaryColor;
+				font-weight: 400;
+
+			}
+
+			p {
+				font-size: 1.4em;
+				color: #999;
+				margin-bottom: 2em;
 			}
 		}
 
@@ -177,6 +225,16 @@
 	footer {
 		background: @white;
 			padding: 4em 0em;
+	
+			p {
+				font-size: 1.6em;
+				line-height: 1.3em;
+				margin-bottom: 1em;
+
+				em {
+					font-family: Palatino;
+				}
+			}
 	}
 }
 
