--- a/less/basic.less
+++ b/less/basic.less
@@ -4,7 +4,7 @@
 
 	body
 	{
-		background: @primaryColor url('../images/header-bg.jpg') no-repeat;
+		background: @primaryColor url('../images/bg.jpg') no-repeat;
 		background-size: cover;
 		background-position: center 0;
 		background-attachment: fixed;
@@ -16,9 +16,9 @@
 
 	}
 
-	body,input,textarea,select
+	body,input,textarea,select, button
 	{
-		
+		font-family: @primaryFontStack;
 		-webkit-text-stroke: 0.25px;
 	}
 
@@ -215,84 +215,4 @@
 
 				/* Forms */
 
-		form
-		{
-		}
 		
-			form label
-			{
-				display: block;
-				margin: 0 0 0.5em 0;
-			}
-		
-			form input.button,
-			form input.text,
-			form select,
-			form textarea
-			{
-				-webkit-appearance: none;
-				display: block;
-				border: 0;
-				background: #f5f5f5;
-				width: 100%;
-				padding: 0.75em;
-				-moz-transition: background-color 0.35s ease-in-out;
-				-webkit-transition: background-color 0.35s ease-in-out;
-				-o-transition: background-color 0.35s ease-in-out;
-				-ms-transition: background-color 0.35s ease-in-out;
-				transition: background-color 0.35s ease-in-out;
-			}
-
-				form input.text:focus,
-				form select:focus,
-				form textarea:focus
-				{
-					background: #f2f2f2;
-				}
-				
-				form textarea
-				{
-					min-height: 12em;
-				}
-
-				form .formerize-placeholder
-				{
-					color: #5a5959 !important;
-				}
-
-				form ::-webkit-input-placeholder
-				{
-					color: #5a5959 !important;
-				}
-
-				form :-moz-placeholder
-				{
-					color: #5a5959 !important;
-				}
-
-				form ::-moz-placeholder
-				{
-					color: #5a5959 !important;
-				}
-
-				form :-ms-input-placeholder
-				{
-					color: #5a5959 !important;
-				}
-
-				form ::-moz-focus-inner
-				{
-					border: 0;
-				}
-
-			form input.text,
-			form select
-			{
-				line-height: 1em;
-			}
-
-			form ul.actions
-			{
-				margin-bottom: 0;
-				text-align: center;
-			}
