--- a/less/fitamize.less
+++ b/less/fitamize.less
@@ -9,6 +9,37 @@
 @import "basic.less";
 @import "buttons.less";
 
+.container {
+
+	&.micro {
+
+		width: 600px;
+
+	}
+
+}
+
+.arrow-wrapper {
+
+			width: 100px;
+			margin: 0 auto;
+
+			.arrow-down {
+				width: 0; 
+				height: 0; 
+				border-left: 50px solid transparent;
+				border-right: 50px solid transparent;
+				border-top: 40px solid #000;
+
+				&.small {
+					border-left: 25px solid transparent;
+					border-right: 25px solid transparent;
+					border-top: 20px solid #000;
+				}
+			}
+
+		}
+
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
@@ -202,6 +233,7 @@
 
 		.team-member {
 			text-align: center;
+			cursor: pointer;
 
 			.avatar {
 				margin-bottom: 1em;
@@ -223,13 +255,29 @@
 	}
 
 	footer {
-		background: @white;
-			padding: 4em 0em;
-	
+			background: @white;
+			padding-bottom: 4em;
+		
+
+			.team-info p {
+					margin-top: 1.5em;
+				}
+
+			.arrow-wrapper {
+				margin: 0 auto;
+				width: 50px;
+			}
+
+			.arrow-down {
+				border-top-color: #eaeaea;
+			}
+
 			p {
+
+				
+
 				font-size: 1.6em;
 				line-height: 1.3em;
-				margin-bottom: 1em;
 
 				em {
 					font-family: Palatino;
@@ -253,30 +301,72 @@
 
 	header {
 
-		padding: 4em 0em;
+		padding: 4em 0em 4em 0em;
 
 		background: #000;
 
 		h2 {
 			color: @white;
-			font-size: 3.2em;
-		}
-
-		h3 {
-			font-size: 2.2em;
-			color: @white;
+			margin-bottom: .5em;
 		}
 
 		p {
 			font-size: 1.8em;
+				line-height: 1.3em;
+				color: @white;
+		}
+
+	}
+
+	article {
+
+		background: #000;
+		padding-bottom: 4em;
+
+		p {
+			margin-top: .6em;
+			font-size: 1.6em;
 			color: @white;
+			line-height: 1.2em;
 		}
 
 	}
 
 	footer {
 
-		padding: 4em 0em;
+		padding: 0em 0em 12em 0em;
+		
+
+		form {
+
+			margin-top: 4em;
+
+			label {
+				font-size: 1.5em;
+				color: @white;
+				font-weight: 400;
+				margin-bottom: .5em;
+				display: block;
+			}
+
+			input {
+				display: block;
+				width: 100%;
+				padding: .7em 1em .8em 1em;
+				background: none;
+				color: #ccc;
+				font-size: 1.6em;
+				font-weight: 200;
+				border-radius: .2em;
+				outline: none;
+				outline-color: @white;
+				border-color: @white;
+				-webkit-text-stroke: 0;
+				border-style: none;
+				box-shadow: inset 0 0 0 2px @white;
+			}
+
+		}
 
 	}
 }
@@ -293,9 +383,17 @@
 		margin: 0;
 		background: #333333;
 
+		
+
 
 		header {
 			
+			
+
+			.social-icon {
+				margin: 0em 2em 0em 2em;
+			}
+
 		}
 
 		footer {
@@ -310,6 +408,8 @@
 				letter-spacing: .05em;
 
 			}
+
+
 
 		}
 	}
