--- a/less/style-mobile.less
+++ b/less/style-mobile.less
@@ -31,3 +31,20 @@
 #team {
 	text-align: center;
 }
+
+#register {
+	text-align: center;
+
+	footer {
+
+		form {
+
+			label {
+				text-align: left;
+			}
+
+		}
+
+	}
+	
+}
