--- a/less/fitamize.less
+++ b/less/fitamize.less
@@ -353,17 +353,18 @@
 				display: block;
 				width: 100%;
 				padding: .7em 1em .8em 1em;
-				background: none;
+				background: #333;
 				color: #ccc;
 				font-size: 1.6em;
 				font-weight: 200;
 				border-radius: .2em;
 				outline: none;
+				border-style: solid;
 				outline-color: @white;
 				border-color: @white;
 				-webkit-text-stroke: 0;
-				border-style: none;
-				box-shadow: inset 0 0 0 2px @white;
+				border-width: 2px;
+				
 			}
 
 		}
