--- a/less/basic.less
+++ b/less/basic.less
@@ -4,7 +4,7 @@
 
 	body
 	{
-		background: @primaryColor url('../images/bg.jpg') no-repeat;
+		background-color: @primaryColor;
 		background-size: cover;
 		background-position: center 0;
 		background-attachment: fixed;
